# DuoDose

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: figure_style_contract.md  method.md  outputs.md  parameter_sensitivity_audit.md  parameter_sensitivity_metric_definitions.md  parameters.md  quickstart.md  reproducibility.md  troubleshooting.md
examples/: basic_usage.py
reproducibility/: FORMAL_RUNBOOK.md  README.md  audit_manuscript_contracts.py  audit_parameter_sensitivity.py  build_manuscript_workbooks.mjs  check_formal_completion.py  generate_final_artifacts.py  generate_manuscript_materials.py  prepare_data.py  progress_stage.py  recompute_semireal_operating_points.py  run_all_formal_analyses.ps1  run_controlled_benchmark.py  run_domain_audit.py  run_external_benchmark.py  run_label_uncertainty_audit.py  run_parameter_sensitivity.py  run_real_application.py  run_real_validation.py  run_runtime_scaling.py  run_validation_suite.py  run_with_heartbeat.py
scripts/: convert_xili_rds.R  inspect_xili_rds.R  smoke_readme_examples.py
tests/: conftest.py  test_api.py  test_backend_registry.py  test_backend_smoke.py  test_cache_validation.py  test_cli.py  test_domain_audit_aggregate.py  test_doubletfinder_wrapper_contract.py  test_end_to_end.py  test_features.py  test_final_protocol.py  test_fitted_reference_invariance.py  test_import.py  test_input_validation.py  test_manuscript_materials.py  test_manuscript_xlsx_optional.py  test_parameter_sensitivity_audit.py  test_progress.py  (+14 more)
(+67 files in other folders)
