[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duodose"
version = "0.1.0"
description = "Homotypic-aware doublet detection for single-cell RNA sequencing"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Yongqi Huang"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "anndata>=0.10",
  "joblib>=1.3",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dl = ["torch>=2.0"]
external = ["scanpy>=1.9", "scrublet>=0.2.3"]
plots = ["matplotlib>=3.7"]
manuscript = ["torch>=2.0", "scanpy>=1.9", "scrublet>=0.2.3", "matplotlib>=3.7", "umap-learn>=0.5", "psutil>=5.9", "openpyxl>=3.1"]
dev = ["pytest>=7", "ruff>=0.5", "build>=1", "twine>=5"]
docs = ["sphinx>=7", "myst-parser>=2"]

[project.scripts]
duodose = "duodose.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["duodose*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
